# argparse

./: .gitignore  CMakeLists.txt  meson.build  meson_options.txt  mkdocs.yml
docs/: index.md
docs/getting_started/: quick_start.md
docs/legal/: license.md
include/: meson.build
include/argparse/: argparse.hpp  config.hpp.in
tools/: setup_project.py
